--- a/blogpost.html
+++ b/blogpost.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 
 	<head>
@@ -5,6 +6,7 @@
 		<link rel="stylesheet" href="cc/estilos.css" />
 	</head>
 	<body>
+		<header>Esto es una cabecera</header>
 		<h1>Aqui vamos a hacer un BlogPost</h1>
 		<p>Y este es el parrafo de inicio</p>
 	</body>
