A second paragraph is added and font color is modified

--- a/blogpost.html
+++ b/blogpost.html
@@ -2,11 +2,17 @@
 
 	<head>
 		<title>BlogPost</title>
-		<link rel="stylesheet" href="cc/estilos.css" />
+		<link rel="stylesheet" href="css/estilos.css" />
 	</head>
 	<body>
 		<h1>Aqui vamos a hacer un BlogPost</h1>
 		<p>Y este es el parrafo de inicio</p>
+		<p>Los blogs son la mejor forma de compartir
+		información y sus ideas. 
+		
+		Mucho más que ir a conferencias o salir en Youtube.
+		Excepto si eres un rockstar. Pero estadísticamente 
+		no los eres... por ahora.</p>
 	</body>
 
 </html>
