it changed the header text and the paragraph text color

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="css/estilos.css" />
 	</head>
 	<body>
-		<header>Esto es una cabecera</header>
+		<header>Blog maestro</header>
 		<h1>Aqui vamos a hacer un BlogPost</h1>
 		<p>Y este es el parrafo de inicio</p>
 		<p>Los blogs son la mejor forma de compartir
@@ -15,6 +15,7 @@
 		Mucho más que ir a conferencias o salir en Youtube.
 		Excepto si eres un rockstar. Pero estadísticamente 
 		no los eres... por ahora.</p>
+		<p>Suscribete y dale like</p>
 	</body>
 
 </html>
