--- a/blogpost.html
+++ b/blogpost.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-		<title>Welcome!</title>
+		<title>Welcome! 2.0</title>
 		<link rel="stylesheet" href="css/estilos.css" />
 	</head>
 	<body>
